--- a/Libraries.nuspec
+++ b/Libraries.nuspec
@@ -2,16 +2,19 @@
 <package >
   <metadata>
     <id>5ray69.Libraries</id>
-    <version>$version$</version>
+    <version>2.0.0.6</version>
     <title>Libraries</title>
     <authors>5ray69</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <projectUrl>http://github.com/5ray69/Libraries.git/</projectUrl>
-    <description>Библиотека вспомогательных классов плагинов Ревита 2022 в работе электрика</description>
+    <description>Библиотека вспомогательных классов Ревита 2022 в работе электрика</description>
     <releaseNotes>добавлены комментарии к методам классов в пакет</releaseNotes>
     <tags>C# package 5ray69 Libraries</tags>
     <readme>README.md</readme>
+    <dependencies>
+      <group targetFramework=".NETFramework4.8" />
+    </dependencies>
   </metadata>
 
   <files>
