Add classes ConduitAndFittingProcessor, ConnectorExtractor, EndConnectorFinder, GroupsOfConnectors, PathForCircuit

--- a/Libraries.csproj
+++ b/Libraries.csproj
@@ -89,16 +89,21 @@
     <Compile Include="ElectricsLib\AllObjectsElectric.cs" />
     <Compile Include="ElectricsLib\AllObjectsElectricOnLevel.cs" />
     <Compile Include="ElectricsLib\CircuitNamingSchemeChecker.cs" />
+    <Compile Include="ElectricsLib\ConduitAndFittingProcessor.cs" />
+    <Compile Include="ElectricsLib\ConnectorExtractor.cs" />
     <Compile Include="ElectricsLib\DozaCollector.cs" />
     <Compile Include="ElectricsLib\DozaGroup.cs" />
     <Compile Include="ElectricsLib\DozaGroups.cs" />
+    <Compile Include="ElectricsLib\EndConnectorFinder.cs" />
     <Compile Include="ElectricsLib\FeederShield.cs" />
+    <Compile Include="ElectricsLib\GroupsOfConnectors.cs" />
     <Compile Include="ElectricsLib\LengthCircuit.cs" />
     <Compile Include="ElectricsLib\LoadCircuit.cs" />
     <Compile Include="ElectricsLib\LoadsPanel.cs" />
     <Compile Include="ElectricsLib\MySort.cs" />
     <Compile Include="ElectricsLib\PanelNameValidator.cs" />
     <Compile Include="ElectricsLib\Panels.cs" />
+    <Compile Include="ElectricsLib\PathForCircuit.cs" />
     <Compile Include="ElectricsLib\ScheduleKey.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ActiveViewNotViewSection.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ByProjectCircuitNaming.cs" />
