classes added after CalculationGroups

--- a/Libraries.csproj
+++ b/Libraries.csproj
@@ -96,6 +96,23 @@
     <Compile Include="ElectricsLib\DozaGroups.cs" />
     <Compile Include="ElectricsLib\EndConnectorFinder.cs" />
     <Compile Include="ElectricsLib\FeederShield.cs" />
+    <Compile Include="ElectricsLib\GroupService\AllFullPaths.cs" />
+    <Compile Include="ElectricsLib\GroupService\CircuitMetrics.cs" />
+    <Compile Include="ElectricsLib\GroupService\EndCircuits.cs" />
+    <Compile Include="ElectricsLib\GroupService\FeederCircuit.cs" />
+    <Compile Include="ElectricsLib\GroupService\FeederSource.cs" />
+    <Compile Include="ElectricsLib\GroupService\FindHeadPanel.cs" />
+    <Compile Include="ElectricsLib\GroupService\FullPath.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupCircuits.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupData.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupLength.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupMaxdU.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupPowers.cs" />
+    <Compile Include="ElectricsLib\GroupService\GroupSumMomentP.cs" />
+    <Compile Include="ElectricsLib\GroupService\HeadPanels.cs" />
+    <Compile Include="ElectricsLib\GroupService\HeadPanelsConnector.cs" />
+    <Compile Include="ElectricsLib\GroupService\ParameterDefinition.cs" />
+    <Compile Include="ElectricsLib\GroupService\ValidatorParameter.cs" />
     <Compile Include="ElectricsLib\GroupsOfConnectors.cs" />
     <Compile Include="ElectricsLib\LengthCircuit.cs" />
     <Compile Include="ElectricsLib\LoadCircuit.cs" />
@@ -105,14 +122,20 @@
     <Compile Include="ElectricsLib\Panels.cs" />
     <Compile Include="ElectricsLib\PathForCircuit.cs" />
     <Compile Include="ElectricsLib\ScheduleKey.cs" />
+    <Compile Include="ElectricsLib\Sorting\GroupNameSorter.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\ActiveViewNotViewDrafting.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ActiveViewNotViewSection.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ByProjectCircuitNaming.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\CircuitNamingSchemeSettingseError.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\DuplicateGroups.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\EmptyParameter.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ErrorConnectEquipment.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ErrorNoCorrectNaming.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\ErrorSizeSectionView.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\FamilyEmptyType.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\FamilyIsNotMEP.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\FamilySymbolNameNotInProject.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\MoreTwoSecheniy.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoConnectCircuit.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoConnector.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoContainLocationElectricsLib.cs" />
@@ -125,8 +148,10 @@
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoScheduleKey.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoSubstringInPanelName.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NoTargetCategory.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\NotConvertToNumber.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NotPointInPanelName.cs" />
     <Compile Include="ElectricsLib\UserWarningElectricsLib\NotSelectedByUser.cs" />
+    <Compile Include="ElectricsLib\UserWarningElectricsLib\СyclicDependenceOfPanels.cs" />
     <Compile Include="ErrorModelLib\ErrorModel.cs" />
     <Compile Include="ErrorModelLib\UserNotificationException.cs" />
     <Compile Include="LevelsLib\ElevationDouble.cs" />
